<?xml version="1.0"?>
<package format="3">
  <name>enjambre_control</name>
  <version>0.0.1</version>
  <description>Control y visualización del enjambre de 6 drones en RViz</description>

  <maintainer email="correo@unir.es">Vicente Carmona Zapata</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>enjambre_drones</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
