<?xml version="1.0"?>
<package format="3">
  <name>enjambre_drones</name>
  <version>0.0.1</version>
  <description>Paquete de descripción y visualización del dron base del TFG</description>

  <maintainer email="tu_correo@ejemplo.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>